Fixing the chrome error mis alignment bug - Prabhu

--- a/media/css/scss/section_questionnarie_active.scss
+++ b/media/css/scss/section_questionnarie_active.scss
@@ -50,6 +50,12 @@
     width:50px;
     float:none;
  }
+ #not_wizard{
+    .error_arrow{
+        float:none !important;
+        background-position: left 3px;
+    }
+ }
 
 }
 
